# deep-fake-detector

./: .env.example  .gitignore  CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  pyproject.toml
src/deep_fake_detector/: __init__.py  analyzer.py  config.py  gradio_app.py  logger.py  main.py  media_processor.py  models.py  orchestrator.py
src/deep_fake_detector/specialist/: __init__.py  audio.py  biometric.py  metadata.py  visual.py
tests/: conftest.py  test_orchestrator.py  test_specialists.py
